# pretty-recipes

./: .gitignore  NOTES.md  README.md  deps.edn
model-server/: model.joblib  pyproject.toml  run.sh
model-server/model_server/: __main__.py  extract.py  prep.py
resources/public/: home.css  imprint.html  index.css  licenses.html  recipe.js
resources/public-label/: index.css  index.html  index.js
src/: dom.clj  pretty_recipes.clj  scraper.clj  server.clj  structured_ingredients.clj
src/ingredients/: ingredients.clj  label_server.clj  scraper.clj
src/labels/: fractions.clj  label_helper.clj  label_helpers.clj  labelling.clj  prep.clj  preprocess.clj  quantity.clj  tokenize.clj  unit.clj  view_model.clj
src/labels/heuristics/: heuristics.clj  no_unit_qty_in_parens.clj
src/labels/rules/: no_unit_qty_in_parens.clj  rules.clj
src/parsers/: delish.clj  kingarthurbaking.clj  recept_se.clj  serious_eats.clj
src/parsers/blog_parsers/: tasty_recipes.clj  wp_recipe_maker.clj
src/views/: collection.clj  common.clj  error.clj  index.clj  ingredients.clj  recipe.clj
test/: hello_test.clj
test/labels/: clean_test.clj  fractions_test.clj  labelling_test.clj  prep_test.clj  preprocess_test.clj  view_model_test.clj
test/views/: ingredients_test.clj
