[tool.poetry]
name = "model-server"
version = "0.1.0"
description = ""
authors = ["Scarysize <Scarysize@user.noreply.github.com>"]
readme = "README.md"
packages = [{include = "model_server"}]

[tool.poetry.dependencies]
python = "^3.10"
scikit-learn = "^1.2.2"
joblib = "^1.2.0"
sklearn-crfsuite = "^0.3.6"
nltk = "^3.8.1"
bottle = "^0.12.25"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
